game/testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: testing
  labels:
    testing: game
spec:
  replicas: 1
  selector:
    matchLabels:
      testing: game
  template:
    metadata:
      labels:
        testing: game
    spec:
      containers:
      - name: game
        image: internal-registry.lingshilive.com/devops/training-api:release-v1.0.33
        resources:
          requests:
            memory: 0
            cpu: 0
          limits:
            memory: "4Gi"
            cpu: "2000m"
        ports:
          - protocol: TCP
            containerPort: 9000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
